@@ -1,3 +1,4 @@
+2025-09-01 (d4115b4): test Win MSVC build action
 2025-08-30 (c2a6ef1): Fix GitHub runner Linux build – Temporarily disable Windows build
 2025-08-30 (a591a6e): update GitHub runner CI/CD script, update docs
 2025-08-30 (05ec4ee): Qt5 -> Qt6 transition
